--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -13,9 +13,8 @@
 			<h1 class="col-sm-8">NB Gardens</h1>
 			<nav class="col-sm-4">
 				<p>New Arrivals</p>
-				<p>Plants and Flowers</p>
-				<p>Gnomes and Furniture</p>
-				<p>Gardening Tools</p>
+				<p>Gnomes</p>
+				<p>Tools</p>
 			</nav>
 		</div>
 	</header>
