Jumbotron nearly complete (add image)

--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -8,16 +8,28 @@
 	</head>
 
 	<body>
+	
 	<header class="container">
 		<div class="row">
 			<h1 class="col-sm-8">NB Gardens</h1>
 			<nav class="col-sm-4">
-				<p>New Arrivals</p>
-				<p>Gnomes</p>
-				<p>Tools</p>
+				<p>Sign In</p>
+				<p>Shopping Basket</p>
+				<p>Wishlist</p>
 			</nav>
 		</div>
 	</header>
+	
+	<section class="jumbotron">
+		<div class="container">
+			<div class="row text-center">
+				<h2>Welome To NB Gardens - The Home of your Garden</h2>
+				<h3>New Customer? <a href="#">Sign up now!</a></h3>
+		
+			</div>
+		</div>
+	</section>
+	
 
 	</body>
 </html>
