--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -23,8 +23,8 @@
 	<section class="jumbotron">
 		<div class="container">
 			<div class="row text-center">
-				<h2>Welome To NB Gardens - The Home of your Garden</h2>
-				<h3>New Customer? <a href="#">Sign up now!</a></h3>
+				<h2><b>Welome to NB Gardens - The Home of your Garden</b></h2>
+				<h3>New Customer?  <a class="btn btn-primary" href="#">Register Now!</a>
 		
 			</div>
 		</div>
