--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -30,6 +30,35 @@
 		</div>
 	</section>
 	
+	<section class="container">
+		<div class="row">
+			<div class="col-sm-6">
+				<p>New Arrivals</p>
+				<a class="thumbnail" href="#">
+                    <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
+                </a>
+			</div>
+			<div class="col-sm-6">
+				<p>Gnomes and Decoration</p>
+				<a class="thumbnail" href="#">
+                    <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
+                </a>
+			</div>
+			<div class="col-sm-6">
+				<p>Garden Furniture</p>
+				<a class="thumbnail" href="#">
+                    <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
+                </a>
+			</div>
+			<div class="col-sm-6">
+				<p>Garden Tools</p>
+				<a class="thumbnail" href="#">
+                    <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
+                </a>
+			</div>			
+		</div>
+	</section>
+	
 
 	</body>
 </html>
