Added Animated Search Bar

--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -11,7 +11,12 @@
 	
 	<header class="container">
 		<div class="row">
-			<h1 class="col-sm-8">NB Gardens</h1>
+			<h1 class="col-sm-3">NB Gardens</h1>
+			<div class="col-sm-5">
+				<form>
+					<input type="text" placeholder="Search..." required>	
+				</form>
+			</div>
 			<nav class="col-sm-4">
 				<p>Sign In</p>
 				<p>Shopping Basket</p>
@@ -32,28 +37,28 @@
 	
 	<section class="container">
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-sm-3">
 				<p>New Arrivals</p>
 				<a class="thumbnail" href="#">
                     <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
                 </a>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-3"
 				<p>Gnomes and Decoration</p>
 				<a class="thumbnail" href="#">
-                    <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
+                    <img class="img-responsive" src="German_garden_gnome.jpg" alt="">
                 </a>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-3">
 				<p>Garden Furniture</p>
 				<a class="thumbnail" href="#">
-                    <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
+                    <img class="img-responsive" src="GARDEN-FURNITURE.jpg" alt="">
                 </a>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-3">
 				<p>Garden Tools</p>
 				<a class="thumbnail" href="#">
-                    <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
+                    <img class="img-responsive" src="Garden_Tools_1.jpg" alt="">
                 </a>
 			</div>			
 		</div>
