Began fixes on picture size

--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -18,9 +18,9 @@
 				</form>
 			</div>
 			<nav class="col-sm-4">
-				<p>Sign In</p>
-				<p>Shopping Basket</p>
-				<p>Wishlist</p>
+				<a class="btn btn-primary" href="#">Sign in/Register</a>
+				<a class="btn btn-primary" href="#">Wishlist</a>
+				<a class="btn btn-primary" href="#">Shopping Basket</a>
 			</nav>
 		</div>
 	</header>
@@ -62,7 +62,31 @@
                 </a>
 			</div>			
 		</div>
+		<div class="row text-center">
+			<a class="btn btn-secondary" href="#">View all Departments</a>
+		</div>		
 	</section>
+	
+	<footer class="container">
+		<div class="row">
+			<p class="col-sm-4">&copy; 2016 NB Gardens </p>
+			<ul class="col-sm-8">
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.facebook.com/NBGardens">
+						<img class="img-responsive" src="fbicon.png" alt="">
+					</a>
+				</li>
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.twitter.com/NBGardens">
+						<img class="img-responsive" src="twiticon.png" alt="">
+					</a>
+				</li>
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.instagram.com/NBGardens">
+						<img class="img-responsive" src="insticon.jpg" alt="">
+					</a>
+				</li>
+	</footer>
 	
 
 	</body>
