Resized images a little and put them in a folder

--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -40,25 +40,25 @@
 			<div class="col-sm-6">
 				<p>New Arrivals</p>
 				<a class="thumbnail" href="#">
-                    <img class="img-responsive" src="new-arrivals-logo.jpg" alt="">
+                    <img class="img-responsive" src="images/new-arrivals-logo.jpg" alt="NewArrivals">
                 </a>
 			</div>
 			<div class="col-sm-6"
 				<p>Gnomes and Decoration</p>
 				<a class="thumbnail" href="#">
-                    <img class="img-responsive" src="German_garden_gnome.jpg" alt="">
+                    <img class="img-responsive" src="images/German_garden_gnome.jpg" alt="Gnomes">
                 </a>
 			</div>
 			<div class="col-sm-6">
 				<p>Garden Furniture</p>
 				<a class="thumbnail" href="#">
-                    <img class="img-responsive" src="GARDEN-FURNITURE.jpg" alt="">
+                    <img class="img-responsive" src="images/GARDEN-FURNITURE.jpg" alt="Furniture">
                 </a>
 			</div>
 			<div class="col-sm-6">
 				<p>Garden Tools</p>
 				<a class="thumbnail" href="#">
-                    <img class="img-responsive" src="Garden_Tools_1.jpg" alt="">
+                    <img class="img-responsive" src="images/Garden_Tools_1.jpg" alt="Tools">
                 </a>
 			</div>			
 		</div>
@@ -73,17 +73,17 @@
 			<ul class="col-sm-8">
 				<li class="col-sm-1">
 					<a class="thumbnail" href="www.facebook.com/NBGardens">
-						<img class="img-responsive" src="fbicon.png" alt="">
+						<img class="img-responsive" src="images/fbicon.png" alt="">
 					</a>
 				</li>
 				<li class="col-sm-1">
 					<a class="thumbnail" href="www.twitter.com/NBGardens">
-						<img class="img-responsive" src="twiticon.png" alt="">
+						<img class="img-responsive" src="images/twiticon.png" alt="">
 					</a>
 				</li>
 				<li class="col-sm-1">
 					<a class="thumbnail" href="www.instagram.com/NBGardens">
-						<img class="img-responsive" src="insticon.jpg" alt="">
+						<img class="img-responsive" src="images/insticon.jpg" alt="">
 					</a>
 				</li>
 	</footer>
