made minor adjustments to sizing and added a search button (need to work out how to make it fit with the extending search bar

--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -23,7 +23,8 @@
 		</a>
 			<div class="col-sm-5">
 				<form>
-					<input type="text" placeholder="Search..." required>	
+					<input id="search-terms" type="text" placeholder="Search..." required>
+					<input type="submit" value="Search">
 				</form>
 			</div>
 			<!-- JQuery Drop Down Login and other Nav parts -->
