added in a registration page - navigatable from 2 buttons on homepage and you can navigate back to home by clicking the NB Gardens Header at the top left

--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NB Gardens</title>
+		<title>NB Gardens - Home</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="main.css">
@@ -23,7 +23,7 @@
 		</a>
 			<div class="col-sm-5">
 				<form>
-					<input id="search-terms" type="text" placeholder="Search..." required>
+					<input id="search-terms" type="search" placeholder="Search..." required>
 					<input type="submit" value="Search">
 				</form>
 			</div>
@@ -50,7 +50,7 @@
 				  </div>                     
 				</li>
 				<li id="signup">
-				  <a href="#">Sign up FREE</a>
+				  <a href="Registration.html">Sign up FREE</a>
 				</li>
 			</ul>
 			</nav>
@@ -61,7 +61,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<h2><b>Welome to NB Gardens - The Home of your Garden</b></h2>
-				<h3>New Customer? <a class="btn btn-primary" href="#">Register Here!</a></h3>
+				<h3>New Customer? <a class="btn btn-primary" href="Registration.html">Register Here!</a></h3>
 			</div>
 		</div>
 	</section>
