added a wishlist page which is navigatable from anywhere

--- a/Registration.html
+++ b/Registration.html
@@ -30,7 +30,7 @@
 			<!-- JQuery Drop Down Login and other Nav parts -->
 			<nav class="col-sm-4">
 			<ul>
-				<li><a class="btn btn-primary" href="#">Wishlist</a></li>
+				<li><a class="btn btn-primary" href="wishlist.html">Wishlist</a></li>
 				<li><a class="btn btn-primary" href="#">Basket</a></li>
 				<li id="login">
 				  <a id="login-trigger" href="#">
@@ -91,6 +91,8 @@
 					</li>
 				</ul>
 					<input type="submit" id="submit" value="Submit">
+					
+	
 				</div>
 			</div>
 		</fieldset>
