--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -30,7 +30,7 @@
 			<!-- JQuery Drop Down Login and other Nav parts -->
 			<nav class="col-sm-4">
 			<ul>
-				<li><a class="btn btn-primary" href="#">Wishlist</a></li>
+				<li><a class="btn btn-primary" href="wishlist.html">Wishlist</a></li>
 				<li><a class="btn btn-primary" href="#">Basket</a></li>
 				<li id="login">
 				  <a id="login-trigger" href="#">
@@ -39,7 +39,7 @@
 				  <div id="login-content">
 					<form>
 					  <fieldset id="inputs">
-						<input id="username" type="email" name="Email" placeholder="Your email address" required>   
+						<input id="email" type="email" name="Email" placeholder="Email Address" required>   
 						<input id="password" type="password" name="Password" placeholder="Password" required>
 					  </fieldset>
 					  <fieldset id="actions">
