added in a basket page (same format as Wishlist) and connected all pages up

--- a/Registration.html
+++ b/Registration.html
@@ -31,7 +31,7 @@
 			<nav class="col-sm-4">
 			<ul>
 				<li><a class="btn btn-primary" href="wishlist.html">Wishlist</a></li>
-				<li><a class="btn btn-primary" href="#">Basket</a></li>
+				<li><a class="btn btn-primary" href="Basket.html">Basket</a></li>
 				<li id="login">
 				  <a id="login-trigger" href="#">
 					Log in <span>▼</span>
@@ -39,7 +39,7 @@
 				  <div id="login-content">
 					<form>
 					  <fieldset id="inputs">
-						<input id="username" type="email" name="Email" placeholder="Your email address" required>   
+						<input id="email" type="email" name="Email" placeholder="Email Address" required>   
 						<input id="password" type="password" name="Password" placeholder="Password" required>
 					  </fieldset>
 					  <fieldset id="actions">
@@ -50,7 +50,7 @@
 				  </div>                     
 				</li>
 				<li id="signup">
-				  <a href="#">Sign up FREE</a>
+				  <a href="Registration.html">Sign up FREE</a>
 				</li>
 			</ul>
 			</nav>
