--- a/Wishlist.html
+++ b/Wishlist.html
@@ -30,8 +30,8 @@
 			<!-- JQuery Drop Down Login and other Nav parts -->
 			<nav class="col-sm-4">
 			<ul>
-				<li><a class="btn btn-primary" href="#">Wishlist</a></li>
-				<li><a class="btn btn-primary" href="#">Basket</a></li>
+				<li><a class="btn btn-primary" href="wishlist.html">Wishlist</a></li>
+				<li><a class="btn btn-primary" href="Basket.html">Basket</a></li>
 				<li id="login">
 				  <a id="login-trigger" href="#">
 					Log in <span>▼</span>
