completed all html and basic css (only one thing I want to fix and thats the image sizes on the homepage) alongside having all links lead to correct pages included hard coded products

--- a/Basket.html
+++ b/Basket.html
@@ -78,4 +78,25 @@
 	</section>
 
 	</body>
+	
+		<footer class="container">
+		<div class="row">
+			<p class="col-sm-4">&copy; 2016 NB Gardens </p>
+			<ul class="col-sm-8">
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.facebook.com/NBGardens">
+						<img class="img-responsive" src="images/fbicon.png" alt="Facebook">
+					</a>
+				</li>
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.twitter.com/NBGardens">
+						<img class="img-responsive" src="images/twiticon.png" alt="Twitter">
+					</a>
+				</li>
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.instagram.com/NBGardens">
+						<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
+					</a>
+				</li>
+	</footer>
 </html>
