--- a/Departments.html
+++ b/Departments.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NB Gardens - Wishlist</title>
+		<title>NB Gardens - List of Departments</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="wishlist.css">
+		<link rel="stylesheet" type="text/css" href="main.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script src="app.js"></script>
 		<link href="images/Favicon.ico" rel="icon" type="image/x-icon" />
@@ -56,66 +56,19 @@
 			</nav>
 		</div>
 	</header>
-	
-	<section class="container">
-		<div class="row">
-			<div class="col-sm-3">
-				 <img src="images/German_garden_gnome.jpg" alt="wishlistItem1">
-			</div>
-			<div class="col-sm-6">
-				 <h3>Relaxed Gnome</h3>
-				 <p>A Stylish German Garden Gnome, in a lying pose with pipe.<p>
-			</div>
-			<div class="col-sm-1">
-				 <h3>£39.99</h3>
-				 <p>Quant: 1</p>
-			</div>
-			<div class="col-sm-2">
-				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="col-sm-3">
-				 <img src="images/wheelbarrow.jpg" alt="wishlistItem2">
-			</div>
-			<div class="col-sm-6">
-				 <h3>Racing Green Wheelbarrow</h3>
-				 <p>15L wheelbarrow with aliminium frame for more manouverability and for easier transport.</p>
-			</div>
-			<div class="col-sm-1">
-				 <h3>£60.99</h3>
-				 <p>Quant: 1</p>
-			</div>
-			<div class="col-sm-2">
-				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
-			</div>
-		</div>
-		
-				<div class="row">
-			<div class="col-sm-3">
-				 <img src="images/gardenTable.jpg" alt="wishlistItem3">
-			</div>
-			<div class="col-sm-6">
-				 <h3>Childrens Garden Bench</h3>
-				 <p>Oak wood garden bench perfect for children.</p>
-			</div>
-			<div class="col-sm-1">
-				 <h3>£150.50</h3>
-				 <p>Quant: 1</p>
-			</div>
-			<div class="col-sm-2">
-				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
-			</div>
-		</div>
+	<section id="DepartmentList">
+	<ul id="Departments">
+		<li><a class="btn btn-secondary" href="NewArrivals.html">New Arrivals</a></li>
+		<li><a class="btn btn-secondary" href="GnomesAndDecoration.html">Gnomes and Decorations</a></li>
+		<li><a class="btn btn-secondary" href="GardenFurniture.html">Garden Furniture</a></li>
+		<li><a class="btn btn-secondary" href="GardenTools.html">Garden Tools</a></li>
+	</ul>
 	</section>
 
-	</body>
 	
-		<footer class="container">
+</body>
+
+	<footer class="container">
 		<div class="row">
 			<p class="col-sm-4">&copy; 2016 NB Gardens </p>
 			<ul class="col-sm-8">
@@ -135,4 +88,5 @@
 					</a>
 				</li>
 	</footer>
+
 </html>
