--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -70,31 +70,31 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<p>New Arrivals</p>
-				<a class="thumbnail" href="#">
+				<a class="thumbnail" href="NewArrivals.html">
                     <img class="img-responsive" src="images/new-arrivals-logo.jpg" alt="NewArrivals">
                 </a>
 			</div>
 			<div class="col-sm-6"
 				<p>Gnomes and Decoration</p>
-				<a class="thumbnail" href="#">
+				<a class="thumbnail" href="GnomesAndDecoration.html">
                     <img class="img-responsive" src="images/German_garden_gnome.jpg" alt="Gnomes">
                 </a>
 			</div>
 			<div class="col-sm-6">
 				<p>Garden Furniture</p>
-				<a class="thumbnail" href="#">
+				<a class="thumbnail" href="GardenFurniture.html">
                     <img class="img-responsive" src="images/GARDEN-FURNITURE.jpg" alt="Furniture">
                 </a>
 			</div>
 			<div class="col-sm-6">
 				<p>Garden Tools</p>
-				<a class="thumbnail" href="#">
+				<a class="thumbnail" href="GardenTools.html">
                     <img class="img-responsive" src="images/Garden_Tools_1.jpg" alt="Tools">
                 </a>
 			</div>			
 		</div>
 		<div class="row text-center">
-			<a class="btn btn-secondary" href="#">View all Departments</a>
+			<a class="btn btn-secondary" href="Departments.html">View all Departments</a>
 		</div>		
 	</section>
 	 
@@ -104,17 +104,17 @@
 			<ul class="col-sm-8">
 				<li class="col-sm-1">
 					<a class="thumbnail" href="www.facebook.com/NBGardens">
-						<img class="img-responsive" src="images/fbicon.png" alt="">
+						<img class="img-responsive" src="images/fbicon.png" alt="Facebook">
 					</a>
 				</li>
 				<li class="col-sm-1">
 					<a class="thumbnail" href="www.twitter.com/NBGardens">
-						<img class="img-responsive" src="images/twiticon.png" alt="">
+						<img class="img-responsive" src="images/twiticon.png" alt="Twitter">
 					</a>
 				</li>
 				<li class="col-sm-1">
 					<a class="thumbnail" href="www.instagram.com/NBGardens">
-						<img class="img-responsive" src="images/insticon.jpg" alt="">
+						<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
 					</a>
 				</li>
 	</footer>
