--- a/NewArrivals.html
+++ b/NewArrivals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NB Gardens - Wishlist</title>
+		<title>NB Gardens - New Arrivals</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="wishlist.css">
@@ -57,10 +57,12 @@
 		</div>
 	</header>
 	
+	<h1>New Arrivals</h1>
+	
 	<section class="container">
 		<div class="row">
 			<div class="col-sm-3">
-				 <img src="images/German_garden_gnome.jpg" alt="wishlistItem1">
+				 <img src="images/German_garden_gnome.jpg" alt="NAItem1">
 			</div>
 			<div class="col-sm-6">
 				 <h3>Relaxed Gnome</h3>
@@ -72,13 +74,13 @@
 			</div>
 			<div class="col-sm-2">
 				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
+				<a class="btn btn-primary" href="#">Add to Wishlist</a>
 			</div>
 		</div>
 		
 		<div class="row">
 			<div class="col-sm-3">
-				 <img src="images/wheelbarrow.jpg" alt="wishlistItem2">
+				 <img src="images/wheelbarrow.jpg" alt="NAItem2">
 			</div>
 			<div class="col-sm-6">
 				 <h3>Racing Green Wheelbarrow</h3>
@@ -90,13 +92,13 @@
 			</div>
 			<div class="col-sm-2">
 				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
+				<a class="btn btn-primary" href="#">Add to Wishlist</a>
 			</div>
 		</div>
 		
-				<div class="row">
+		<div class="row">
 			<div class="col-sm-3">
-				 <img src="images/gardenTable.jpg" alt="wishlistItem3">
+				 <img src="images/gardenTable.jpg" alt="NAItem3">
 			</div>
 			<div class="col-sm-6">
 				 <h3>Childrens Garden Bench</h3>
@@ -108,7 +110,7 @@
 			</div>
 			<div class="col-sm-2">
 				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
+				<a class="btn btn-primary" href="#">Add to Wishlist</a>
 			</div>
 		</div>
 	</section>
