--- a/GardenFurniture.html
+++ b/GardenFurniture.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NB Gardens - Wishlist</title>
+		<title>NB Gardens - Garden Furniture</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="wishlist.css">
@@ -57,46 +57,12 @@
 		</div>
 	</header>
 	
+	<h1>Garden Furniture</h1>
+	
 	<section class="container">
 		<div class="row">
 			<div class="col-sm-3">
-				 <img src="images/German_garden_gnome.jpg" alt="wishlistItem1">
-			</div>
-			<div class="col-sm-6">
-				 <h3>Relaxed Gnome</h3>
-				 <p>A Stylish German Garden Gnome, in a lying pose with pipe.<p>
-			</div>
-			<div class="col-sm-1">
-				 <h3>£39.99</h3>
-				 <p>Quant: 1</p>
-			</div>
-			<div class="col-sm-2">
-				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="col-sm-3">
-				 <img src="images/wheelbarrow.jpg" alt="wishlistItem2">
-			</div>
-			<div class="col-sm-6">
-				 <h3>Racing Green Wheelbarrow</h3>
-				 <p>15L wheelbarrow with aliminium frame for more manouverability and for easier transport.</p>
-			</div>
-			<div class="col-sm-1">
-				 <h3>£60.99</h3>
-				 <p>Quant: 1</p>
-			</div>
-			<div class="col-sm-2">
-				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
-			</div>
-		</div>
-		
-				<div class="row">
-			<div class="col-sm-3">
-				 <img src="images/gardenTable.jpg" alt="wishlistItem3">
+				 <img src="images/gardenTable.jpg" alt="NAItem3">
 			</div>
 			<div class="col-sm-6">
 				 <h3>Childrens Garden Bench</h3>
@@ -108,9 +74,10 @@
 			</div>
 			<div class="col-sm-2">
 				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Remove from Wishlist</a>
+				<a class="btn btn-primary" href="#">Add to Wishlist</a>
 			</div>
 		</div>
+		
 	</section>
 
 	</body>
