--- a/Basket.html
+++ b/Basket.html
@@ -75,7 +75,12 @@
 			</div>
 		</div>
 		
+		<div id="ProceedToCheckout">
+			<a class="btn btn-primary" href="#">Proceed to Checkout</a>
+		</div>
+		
 	</section>
+	
 
 	</body>
 	
