fixed image sizes on the homepage

--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -71,25 +71,25 @@
 			<div class="col-sm-6">
 				<p>New Arrivals</p>
 				<a class="thumbnail" href="NewArrivals.html">
-                    <img class="img-responsive" src="images/new-arrivals-logo.jpg" alt="NewArrivals">
+                    <img id="NewArrivals" class="img-responsive" src="images/new-arrivals-logo.jpg" alt="NewArrivals">
                 </a>
 			</div>
 			<div class="col-sm-6"
 				<p>Gnomes and Decoration</p>
 				<a class="thumbnail" href="GnomesAndDecoration.html">
-                    <img class="img-responsive" src="images/German_garden_gnome.jpg" alt="Gnomes">
+                    <img id="Gnomes" class="img-responsive" src="images/German_garden_gnome.jpg" alt="Gnomes">
                 </a>
 			</div>
 			<div class="col-sm-6">
 				<p>Garden Furniture</p>
 				<a class="thumbnail" href="GardenFurniture.html">
-                    <img class="img-responsive" src="images/GARDEN-FURNITURE.jpg" alt="Furniture">
+                    <img id="Furniture" class="img-responsive" src="images/GARDEN-FURNITURE.jpg" alt="Furniture">
                 </a>
 			</div>
 			<div class="col-sm-6">
 				<p>Garden Tools</p>
 				<a class="thumbnail" href="GardenTools.html">
-                    <img class="img-responsive" src="images/Garden_Tools_1.jpg" alt="Tools">
+                    <img id="Tools" class="img-responsive" src="images/Garden_Tools_1.jpg" alt="Tools">
                 </a>
 			</div>			
 		</div>
