Finally finished search function, very primitive. Hides products that do not match search terms. Uses Session Storage to check search field data

--- a/Basket.html
+++ b/Basket.html
@@ -22,12 +22,13 @@
 			<h1 class="col-sm-3">NB Gardens</h1>
 		</a>
 			<div class="col-sm-5">
-				<form action="Search.html">
+                <form action="Search.html" method="get">
 					<input name="searchitems" id="search-terms" type="text" placeholder="Search..." required>
 					<input type="submit" value="search" onclick="MyFunction()">
 					<script>
-						function MyFunction{
-							sessionStorage.setItem("searchValue", "search-terms");
+						function MyFunction(){
+                            var search = document.getElementById("search-terms").value;
+							sessionStorage.setItem("searchValue", search);
 						}
 					</script>
 				</form>
@@ -89,24 +90,24 @@
 
 	</body>
 	
-		<footer class="container">
-		<div class="row">
-			<p class="col-sm-4">&copy; 2016 NB Gardens </p>
-			<ul class="col-sm-8">
-				<li class="col-sm-1">
-					<a class="thumbnail" href="www.facebook.com/NBGardens">
-						<img class="img-responsive" src="images/fbicon.png" alt="Facebook">
-					</a>
-				</li>
-				<li class="col-sm-1">
-					<a class="thumbnail" href="www.twitter.com/NBGardens">
-						<img class="img-responsive" src="images/twiticon.png" alt="Twitter">
-					</a>
-				</li>
-				<li class="col-sm-1">
-					<a class="thumbnail" href="www.instagram.com/NBGardens">
-						<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
-					</a>
-				</li>
-	</footer>
+	<footer class="container">
+        	<div class="row">
+		<p class="col-sm-4">&copy; 2016 NB Gardens </p>
+		<ul class="col-sm-8">
+			<li class="col-sm-1">
+				<a class="thumbnail" href="www.facebook.com/NBGardens">
+					<img class="img-responsive" src="images/fbicon.png" alt="Facebook">
+				</a>
+			</li>
+			<li class="col-sm-1">
+				<a class="thumbnail" href="www.twitter.com/NBGardens">
+					<img class="img-responsive" src="images/twiticon.png" alt="Twitter">
+				</a>
+			</li>
+			<li class="col-sm-1">
+				<a class="thumbnail" href="www.instagram.com/NBGardens">
+					<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
+				</a>
+			</li>
+        </footer>
 </html>
