--- a/GardenTools.html
+++ b/GardenTools.html
@@ -22,12 +22,13 @@
 			<h1 class="col-sm-3">NB Gardens</h1>
 		</a>
 			<div class="col-sm-5">
-				<form action="Search.html">
+                <form action="Search.html" method="get">
 					<input name="searchitems" id="search-terms" type="text" placeholder="Search..." required>
 					<input type="submit" value="search" onclick="MyFunction()">
 					<script>
-						function MyFunction{
-							sessionStorage.setItem("searchValue", "search-terms");
+						function MyFunction(){
+                            var search = document.getElementById("search-terms").value;
+							sessionStorage.setItem("searchValue", search);
 						}
 					</script>
 				</form>
@@ -71,7 +72,7 @@
 			</div>
 			<div class="col-sm-6">
 				 <h3>Racing Green Wheelbarrow</h3>
-				 <p>15L wheelbarrow with aliminium frame for more manouverability and for easier transport.</p>
+				 <p>15L wheelbarrow with aluminium frame for more manouverability and for easier transport.</p>
 			</div>
 			<div class="col-sm-1">
 				 <h3>£60.99</h3>
