--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -23,12 +23,13 @@
 			<h1 class="col-sm-3">NB Gardens</h1>
 		</a>
 			<div class="col-sm-5">
-				<form action="Search.html">
+                <form action="Search.html" method="get">
 					<input name="searchitems" id="search-terms" type="text" placeholder="Search..." required>
 					<input type="submit" value="search" onclick="MyFunction()">
 					<script>
-						function MyFunction{
-							sessionStorage.setItem("searchValue", "search-terms");
+						function MyFunction(){
+                            var search = document.getElementById("search-terms").value;
+							sessionStorage.setItem("searchValue", search);
 						}
 					</script>
 				</form>
@@ -80,7 +81,7 @@
                     <img id="NewArrivals" class="img-responsive" src="images/new-arrivals-logo.jpg" alt="NewArrivals">
                 </a>
 			</div>
-			<div class="col-sm-6"
+			<div class="col-sm-6">
 				<p>Gnomes and Decoration</p>
 				<a class="thumbnail" href="GnomesAndDecoration.html">
                     <img id="Gnomes" class="img-responsive" src="images/German_garden_gnome.jpg" alt="Gnomes">
