--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -25,12 +25,11 @@
 			<div class="col-sm-5">
                 <form action="Search.html" method="get">
 					<input name="searchitems" id="search-terms" type="text" placeholder="Search..." required>
-					<input type="submit" value="search" onclick="MyFunction()">
+					<input type="submit" value="Search" onclick="MyFunction()">
 					<script>
 						function MyFunction(){
-                            var search = document.getElementById("search-terms").value;
-							sessionStorage.setItem("searchValue", search);
-						}
+							sessionStorage.setItem("searchValue", document.getElementById("search-terms").value);
+						};
 					</script>
 				</form>
 			</div>
@@ -74,7 +73,7 @@
 	</section>
 	
 	<section class="container">
-		<div class="row">
+		<div id="thumbnails" class="row">
 			<div class="col-sm-6">
 				<p>New Arrivals</p>
 				<a class="thumbnail" href="NewArrivals.html">
@@ -124,6 +123,7 @@
 						<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
 					</a>
 				</li>
+		</div>
 	</footer>
 	
 
