--- a/Search.html
+++ b/Search.html
@@ -24,12 +24,11 @@
 			<div class="col-sm-5">
                 <form action="Search.html" method="get">
 					<input name="searchitems" id="search-terms" type="text" placeholder="Search..." required>
-					<input type="submit" value="search" onclick="MyFunction()">
+					<input type="submit" value="Search" onclick="MyFunction()">
 					<script>
 						function MyFunction(){
-                            var search = document.getElementById("search-terms").value;
-							sessionStorage.setItem("searchValue", search);
-						}
+							sessionStorage.setItem("searchValue", document.getElementById("search-terms").value);
+						};
 					</script>
 				</form>
 			</div>
@@ -119,7 +118,7 @@
 			</div>
 		</div>
             
-            	<script>
+        <script>
                    
                    if (sessionStorage.getItem("searchValue") !== "Gnome"){
                        var gnome = document.getElementById('GnomeRow');
@@ -140,5 +139,27 @@
 
 	
 	</body>
+	
+		<footer class="container">
+		<div class="row">
+			<p class="col-sm-4">&copy; 2016 NB Gardens </p>
+			<ul class="col-sm-8">
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.facebook.com/NBGardens">
+						<img class="img-responsive" src="images/fbicon.png" alt="Facebook">
+					</a>
+				</li>
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.twitter.com/NBGardens">
+						<img class="img-responsive" src="images/twiticon.png" alt="Twitter">
+					</a>
+				</li>
+				<li class="col-sm-1">
+					<a class="thumbnail" href="www.instagram.com/NBGardens">
+						<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
+					</a>
+				</li>
+		</div>
+	</footer>
 	
 </html>
