testing extra functionality on the wishlist and basket, which is currently commented out on a few pages due to wanting to make sure it works before implementing

--- a/GardenTools.html
+++ b/GardenTools.html
@@ -11,11 +11,8 @@
 	</head>
 
 	<body>
-	
-	<!-- Main Body -->
-	
 
-
+	<!-- Top Nav Bar including home button -->
 	<header class="container">
 		<div class="row">
 		<a href="NB Gardens.html">
@@ -61,7 +58,7 @@
 			</nav>
 		</div>
 	</header>
-	
+	<!-- Item List -->
 	<h1>Garden Tools</h1>
 	
 	<section class="container">
@@ -85,9 +82,9 @@
 		
 	</section>
 
-	</body>
 	
-		<footer class="container">
+	<!-- Footer including social media links --> 
+	<footer class="container">
 		<div class="row">
 			<p class="col-sm-4">&copy; 2016 NB Gardens </p>
 			<ul class="col-sm-8">
@@ -106,6 +103,10 @@
 						<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
 					</a>
 				</li>
+			</ul>
 		</div>
 	</footer>
+	
+	
+	</body>
 </html>
