--- a/NB Gardens.html
+++ b/NB Gardens.html
@@ -8,15 +8,11 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script src="app.js"></script>
 		<link href="images/Favicon.ico" rel="icon" type="image/x-icon" />
-
 	</head>
 
 	<body>
 	
-	<!-- Main Body -->
-	
-
-
+	<!-- Top Nav Bar including home button -->
 	<header class="container">
 		<div class="row">
 		<a href="NB Gardens.html">
@@ -33,6 +29,7 @@
 					</script>
 				</form>
 			</div>
+			
 			<!-- JQuery Drop Down Login and other Nav parts -->
 			<nav class="col-sm-4">
 			<ul>
@@ -63,6 +60,7 @@
 		</div>
 	</header>
 	
+	<!-- Large image banner with Website Description -->
 	<section class="jumbotron">
 		<div class="container">
 			<div class="row text-center">
@@ -72,6 +70,7 @@
 		</div>
 	</section>
 	
+	<!-- Departmental Thumbnails -->
 	<section class="container">
 		<div id="thumbnails" class="row">
 			<div class="col-sm-6">
@@ -104,6 +103,7 @@
 		</div>		
 	</section>
 	 
+	<!-- Footer including social media links --> 
 	<footer class="container">
 		<div class="row">
 			<p class="col-sm-4">&copy; 2016 NB Gardens </p>
@@ -123,6 +123,7 @@
 						<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
 					</a>
 				</li>
+			</ul>
 		</div>
 	</footer>
 	
