--- a/Search.html
+++ b/Search.html
@@ -77,8 +77,16 @@
 				 <p>Quant: 1</p>
 			</div>
 			<div class="col-sm-2">
-				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Add to Wishlist</a>
+				<a class="btn btn-primary" href="">Add to Basket</a>
+				<a class="btn btn-primary" href="">
+					Add to Wishlist
+					<!--
+					<script>
+						var bool = true;
+						sessionStorage.setItem("wGnomeTrue", bool);
+					</script>
+					-->
+				</a>
 			</div>
 		</div>
 		
@@ -95,8 +103,16 @@
 				 <p>Quant: 1</p>
 			</div>
 			<div class="col-sm-2">
-				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Add to Wishlist</a>
+				<a class="btn btn-primary" href="">Add to Basket</a>
+				<a class="btn btn-primary" href="">
+					Add to Wishlist
+					<!--
+					<script>
+						var bool = true;
+						sessionStorage.setItem("wWheelbarrowTrue", bool);
+					</script>
+					-->
+				</a>
 			</div>
 		</div>
 		
@@ -113,8 +129,18 @@
 				 <p>Quant: 1</p>
 			</div>
 			<div class="col-sm-2">
-				<a class="btn btn-primary" href="#">Add to Basket</a>
-				<a class="btn btn-primary" href="#">Add to Wishlist</a>
+				<a class="btn btn-primary" href="">
+					Add to Basket
+				</a>
+				<a class="btn btn-primary" href="">
+					Add to Wishlist
+					<!--
+					<script>
+						var bool = true;
+						sessionStorage.setItem("wTableTrue", bool);
+					</script>
+					-->
+				</a>
 			</div>
 		</div>
             
@@ -159,6 +185,7 @@
 						<img class="img-responsive" src="images/insticon.jpg" alt="Instagram">
 					</a>
 				</li>
+			</ul>
 		</div>
 	</footer>
 	
