--- a/Wishlist.html
+++ b/Wishlist.html
@@ -123,24 +123,36 @@
 			</div>
 		</div>
 	</div>
-	<!--
+
 	    <script>
-                   if (sessionStorage.getItem("wGnomeTrue") === true){
+                   if (localStorage.getItem("wGnomeTrue") === "true"){
                        var gnome = document.getElementById('WGnomeRow');
                        gnome.style.display = 'block';
-                   };
+                   }
+				   else {
+					   var gnome = document.getElementById("WGnomeRow");
+					   gnome.style.display = 'none';
+				   };
                    
-                   if (sessionStorage.getItem("wWheelbarrowTrue") === true){
+                   if (localStorage.getItem("wWheelbarrowTrue") === "true"){
                        var wheelbarrow = document.getElementById('WWheelbarrowRow');
                        wheelbarrow.style.display = 'block';
-                   };
+                   }				   
+				   else {
+					   var wheelbarrow = document.getElementById("WWheelbarrowRow");
+					   wheelbarrow.style.display = 'none';
+				   };
                    
-                   if (sessionStorage.getItem("wTableTrue") === true){
+                   if (localStorage.getItem("wTableTrue") === "true"){
                        var table = document.getElementById('WTableRow');
                        table.style.display = 'block';                       
-                   };
+                   }
+				   else {
+                       var table = document.getElementById('WTableRow');
+                       table.style.display = 'none';
+				   };
 		</script>
-	-->
+
 	</section>
 
 	</body>
